# middle_school_final_project

./: Cargo.toml  log  log2
src/: app.rs  main.rs
src/app/: run.rs
src/app/run/: camera.rs  gpu_shared_data.rs  voxel_data_generator.rs
src/shader/: log  rendering_shader.comp  rendering_shader.spv
